<resources>
    <string name="google_maps_key">AIzaSyDPEzq6U9-c-f27g7TdgnZrobNnrvePIKQ</string>


    <string name="app_name">SonrisaSaludable</string>
    <string name="carLblMensaje">Cargando...</string>
    <string name="sesHintCorreo">Correo</string>
    <string name="sesHintClave">Clave</string>
    <string name="sesChkRecordar">Recordar Sesión</string>
    <string name="sesLblRegistro">¡Regístrate!</string>
    <string name="sesBtnIngresar">Ingresar</string>
    <string name="sesBtnSalir">Salir</string>
    <string name="sesLblCopy">Copyright ® 2025</string>
    <string name="editarperfil">Editar Perfil</string>
    <string name="textoGuardar">Guardar Cambios</string>
    <string name="placeholderBuscar">Buscar...</string>


    <string name="frgCfgBtnAplicar">Aplicar</string>
    <string name="frgCfgBtnRestaurar">Restaurar</string>
    <string name="sesRBtnSalir">Salir</string>
    <string name="lblBienvenida">!Bienvenido @usuario!</string>
    <string name="lblAgendaCita">Agenda tu Cita</string>
    <string name="SelecCalendario">Selecciona la fecha de tu cita </string>
    <string name="lblHorario">Horario</string>

    <string name="crdlblFechas">21/05/21 16:00 hrs</string>
    <string name="crdlblDoctores">Limpieza dental - Dra. Karime Ortiz</string>
    <string name="crdlblSalones">Salón 1</string>

    <string-array name="options_idiomas">
        <item>Español</item>
        <item>Ingles</item>
        <item>Ruso</item>
        <item>Chino</item>
    </string-array>
    <string-array name="options_temas">
        <item>Claro</item>
        <item>Oscuro</item>
    </string-array>

    <string-array name="options_sexo">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Helicoptero Apache</item>
    </string-array>

    <string name="frgCfgBarSonido">Sonido</string>
    <string name="frgCfgCblSonido">combo</string>
    <string name="froCfgchkNotificacines">Notificaciones</string>
    <string name="frgCfgcboIdioma">Idiomas</string>

    <!-- Fragmento Menu -->

    <string name="titulo_general_especialidades">Especialidades</string>
    <string name="titulo_implantologia">Implantologia</string>
    <string name="titulo_endodoncia">Endodoncia</string>
    <string name="titulo_periodoncia">Periodoncia</string>
    <string name="titulo_doctores_main">Nuestros doctores</string>
    <string name="click_aqui">Haz Click Aqui</string>

    <!-- Fragmento Doctores -->
    <string name="cargo_titulo">Doctores disponibles</string>
    <string name="cargo_pediatra">Pediatra</string>
    <string name="cargo_cardiologo">Cardiologia</string>

    <!-- Fragmento botones -->
    <string name="btn_siguiente">Siguiente</string>

    <!-- Fragmento estado -->
    <string name="estado_pendiente">Pendiente</string>
    <string name="estado_confirmado">Confirmado</string>
    <string name="estado_cancelado">Cancelado</string>

    <string name="cita_reg_exitosa">¡Cita agendada exitosamente!</string>
    <string name="subcita_reg_exitosa">Se esperará la confirmación de tu doctor para aceptar la cita.</string>

    <string name="perfil">Perfil</string>
    <string name="terminos_condiciones">Términos y Condiciones</string>
    <string name="preferencias">Preferencias</string>
    <string name="recordar_notificaciones">Recordar Notificaciones</string>

    <string name="volumen_titulo">Ajusta el volumen</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <string name="historial_citas">Historial de citas</string>
    <string name="proximas_citas">Próximas citas</string>
    <string name="citas_pasadas">Citas pasadas</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_recibo">ReciboActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- Ajustes -->
    <string name="ajustes">Ajustes</string>
    <string name="ajustes_generales">Ajustes Generales</string>
    <string name="tema_aplicacion">Tema de la aplicación</string>
    <string name="idioma">Idioma</string>

    <!-- Notificaciones -->
    <string name="notificaciones">Notificaciones</string>
    <string name="activar_notificaciones">Activar notificaciones</string>
    <string name="desc_notificaciones">Recibir alertas de citas y recordatorios</string>
    <string name="volumen_notificaciones">Volumen de notificaciones</string>

    <!-- Seguridad -->
    <string name="seguridad">Seguridad</string>
    <string name="huella_dactilar">Huella dactilar</string>
    <string name="desc_huella_dactilar">Usar huella para acceder a la aplicación</string>

    <!-- Botones -->
    <string name="guardar_ajustes">Guardar</string>
    <string name="restaurar_defecto">Restaurar</string>


    <string name="fragment_d_home_bienvenido_doctor">Bienvenido Doctor</string>
    <string name="fragment_d_home_confirmadas">Confirmadas</string>
    <string name="fragment_d_home_pendientes">Pendientes</string>
    <string name="fragment_d_home_completadas">Completadas</string>
    <string name="fragment_d_home_ver_todas_citas">Ver Todas las Citas</string>
    <string name="fragment_d_home_nueva_cita">Nueva Cita</string>

    <string name="fragment_p_profile_foto_doctor">Foto del doctor</string>
    <string name="fragment_p_profile_mi_perfil">Mi Perfil</string>
    <string name="fragment_p_profile_nombre_demo">Dr. Juan Carlos Mendoza</string>
    <string name="fragment_p_profile_especialidad_demo">Odontólogo General</string>

    <string name="fragment_p_profile_info_personal">Información Personal</string>
    <string name="fragment_p_profile_cedula_label">Cédula Profesional:</string>
    <string name="fragment_p_profile_cedula_demo">12345678</string>
    <string name="fragment_p_profile_email_label">Email:</string>
    <string name="fragment_p_profile_email_demo">dr.mendoza@clinica.com</string>
    <string name="fragment_p_profile_telefono_label">Teléfono:</string>
    <string name="fragment_p_profile_telefono_demo">+51 987 654 321</string>
    <string name="fragment_p_profile_editar_perfil">Editar Perfil</string>

    <string name="fragment_p_profile_resenas_pacientes">Reseñas de Pacientes</string>
    <string name="fragment_p_profile_calificacion_demo">4.8</string>
    <string name="fragment_p_profile_estrellas">★★★★★</string>
    <string name="fragment_p_profile_num_resenas">(24)</string>
    <string name="fragment_p_profile_ver_todas_resenas">Ver Todas las Reseñas</string>


    <string name="terminos_condiciones_frase">Acepto los términos y condiciones</string>
    <string name="terminos_condiciones_subfrase">términos y condiciones</string>
    <string name="mensaje_terminos">
        Al aceptar estos términos, usted autoriza el tratamiento y control de sus datos personales con un nivel de seguridad intermedio, correspondiente a un proyecto académico y de investigación.
        Reconoce que esta aplicación es un prototipo en desarrollo y que cualquier reclamo, cargo o responsabilidad derivada del uso de esta información quedará inválido y no será procedente.
        Su consentimiento es voluntario y exclusivamente para fines de prueba y aprendizaje.
    </string>

    <string name="titulo_terminos">Términos y Condiciones</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>

    <string name="hint_dni">DNI</string>
    <string name="hint_nombres">Nombres</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_fecha">Selecciona fecha</string>
    <string name="hint_correo">Correo electrónico</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="hint_confirmar_contrasena">Confirme la contraseña</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="hint_direccion">Direccion</string>
    <string name="texto_acepto_terminos">Acepto los términos y condiciones</string>
    <string name="texto_crear">Crear</string>
    <string name="texto_salir">Salir</string>


</resources>