<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.SesionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="50dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/logo_horizontal_2"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/sesTxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:background="@color/white"
                android:hint="@string/sesHintCorreo"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/sesTxtClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:inputType="textPassword"
                android:maxLength="100"
                android:background="@color/white"
                android:hint="@string/sesHintClave"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <CheckBox
                android:id="@+id/sesChkRecordar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sesChkRecordar"/>
        </LinearLayout>

        <TextView
            android:id="@+id/sesLblRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/subsecundario"
            android:text="@string/sesLblRegistro"
            android:clickable="true"
            android:focusable="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/sesBtnIngresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:text="@string/sesBtnIngresar"
                android:textAllCaps="false"
                android:backgroundTint="@color/subsecundario"/>
            <Button
                android:id="@+id/sesBtnSalir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/subsecundario"
                android:layout_marginLeft="15dp"
                android:text="@string/sesBtnSalir"
                android:textAllCaps="false"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sesLblCopy"
            android:gravity="center_horizontal|bottom"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>